--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "ioredis": "^5.9.2",
     "pg": "^8.16.3",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
