Fix render.yaml: Use type web for static site and remove root property

--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,7 @@ services:
         sync: false
       - key: FRONTEND_URL
         fromService:
-          type: static
+          type: web
           name: musicmind-frontend
           property: url
       - key: REDIRECT_URI
@@ -25,7 +25,7 @@ services:
           value: /callback 
 
   # Frontend Service (Static Site)
-  - type: static
+  - type: web
     name: musicmind-frontend
     env: static
     buildCommand: cd frontend && npm install && npm run build
