Fix render.yaml: Use host property and handle protocol in server.js

--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
         fromService:
           type: web
           name: musicmind-frontend
-          property: url
+          property: host
       - key: REDIRECT_URI
         fromService:
           type: web
